recorded parts 1 and 2 of L12

--- a/quantitative_biochemistry/Lecture 12 - Vectors and Matrics.ipynb
+++ b/quantitative_biochemistry/Lecture 12 - Vectors and Matrics.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy, math\n",
@@ -19,7 +23,16 @@
    "source": [
     "# Warm-up exercises\n",
     "\n",
-    "TBD"
+    "\\begin{align*}\n",
+    "&1.\\quad && \\frac{0.002}{50} &&=\\\\\n",
+    "&2.\\quad && \\frac{1.5 \\times 10^8}{500} &&=\\\\\n",
+    "&3. \\quad && \\frac{[2 \\times 10^{-15}]^3}{4\\times 3\\times [9 \\times 10^{-12}]^2 \\times 10^{-10}} &&=\\\\\n",
+    "&4. \\quad && \\ln(A-3) - \\ln A &&=\\\\\n",
+    "&5. \\quad && \\log\\sqrt{N} + \\log N^3 &&=\\\\\n",
+    "&6. \\quad && \\int^\\infty_{-\\infty} x^3 dx &&=\\\\\n",
+    "&7. \\quad && \\int^1_0 \\frac{1}{e^{-2x}} dx &&=\\\\\n",
+    "&8.\\quad && \\text{If }  \\frac{dy}{dx}=\\sqrt{x}  &  \\text{ find }  y&=\\\\ \n",
+    "\\end{align*}"
    ]
   },
   {
@@ -28,7 +41,26 @@
    "source": [
     "# Challenge\n",
     "\n",
-    "TBD"
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<img src=\"images/pointing-finger.png\" width=50 title=\"For you\" style=\"vertical-align:top\"/>\n",
+    "<b>For you:</b> Answer to Week 7 Challenge: I have 8 identical balls, and a ninth that looks identical but which is either lighter or heavier than the others. I have a pair of weighing scales which are the old  fashioned balance ones with a plate on each side of the balance point. I am allowed three uses of these scales to identify the odd ball. How can I do it?\n",
+    "</div>\n",
+    "Divide the balls into 3 groups of 3, and for the 3 allowed uses of the scales, you could do the following:\n",
+    "\n",
+    "1. Take one group of 3 and put it on 1 side, and another group on the other side. If they are equal, the odd ball is in the third group (in which case see point (4)).\n",
+    "2. If one group goes down relative to the other, I don't know if I have a light ball or a heavy ball with respect to the norm, so I would test one group against the resting group. Then I would know which group the odd ball was in, and I would also know whether it was lighter or heavier than the others.\n",
+    "3. Now I take the group of three in which the odd ball is lurking, and put one of them on each side of the scales. If they are equal, the odd ball is the unweighed one. If not, I know which is the odd one, since I already know if it is lighter or heavier than the others. Thus in this case I found the odd one in 2 weighings. \n",
+    "4. In point (1) if the 2 groups of 3 are equal, the odd ball is in the unweighed trio, and I don't know yet if it is heavier or lighter. So I weigh the trio against one of the other trios, and then I am at (2) above and can do (3), so I have found the odd ball in 3 weighings."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\">\n",
+    "<img src=\"images/pointing-finger.png\" width=50 title=\"For you\" style=\"vertical-align:top\"/>\n",
+    "<b>For you:</b> Week 8 Challenge: I put a piece of string of length $Q$ metres all the way around the equator next to the earth. I cut another piece of string, $\\pi$ metres longer than the first, and put it around the equator too, held an equal distance from the centre of the earth all the way round. How far from the earth is the second piece of string?\n",
+    "</div>"
    ]
   },
   {
@@ -62,7 +94,11 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -158,7 +194,11 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -242,7 +282,11 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -395,7 +439,11 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -537,13 +585,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "since $|v_3| = 4$ and $|v_4| = \\sqrt{5}$, \n",
+    "since $|v_3| = \\sqrt{13}$ and $|v_4| = \\sqrt{5}$, \n",
     "\n",
     "\\begin{align*}\n",
-    "\\cos \\theta &= \\frac{-4}{4\\sqrt{5}}\\\\\n",
-    "&=-\\frac{1}{\\sqrt{5}}\\\\\n",
-    "\\theta &= 117^\\circ\\\\\n",
-    "&=2.0 \\text{ radians}\n",
+    "\\cos \\theta &= \\frac{-4}{\\sqrt{13}\\times\\sqrt{5}}\\\\\n",
+    "&=-\\frac{4}{\\sqrt{65}}\\\\\n",
+    "\\theta &= 119^\\circ\\\\\n",
+    "&=2.1 \\text{ radians}\n",
     "\\end{align*}\n",
     "\n",
     "<div class=\"alert alert-block alert-warning\">\n",
@@ -991,7 +1039,11 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1244,7 +1296,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": []
   }
