--- a/quantitative_biochemistry/Lecture 12 - Vectors and Matrics.ipynb
+++ b/quantitative_biochemistry/Lecture 12 - Vectors and Matrics.ipynb
@@ -1184,7 +1184,7 @@
     "* a question may ask for \n",
     "  - a *numerical* answer, in which case it will tell you the units required (if applicable), and you then enter the number you've worked out in the box\n",
     "  - an *algebraic* answer, in which you'll be presented with several choices and have to select one\n",
-    "  - a *graph*. You will need to plot this on 2 mm graph paper and e.g. measure the gradient if that is required. A photograph or scan of the graph must be either uploaded to the question (preferred) or sent to your tutor.\n",
+    "  - a *graph*. You will need to plot this on 2 mm graph paper and e.g. measure the gradient if that is required. A photograph or scan of the graph must be either uploaded to the question or sent to your tutor.\n",
     "* the quiz will close later in the same day, e.g. 4.30pm which allows for technical problems and scanning the graph."
    ]
   },
@@ -1213,7 +1213,7 @@
    "source": [
     "## Will I be told my mark?\n",
     "\n",
-    "We will score the assessment in the same way as the practicals i.e. S+,S,S-,NS such that a score of NS means we think you would benefit from some extra help (and we will talk to you about this!) and a score of S- means we think you don't need extra help but you weren't far off so keep practicing!\n",
+    "We plan on scoring the assessment in the same way as the practicals i.e. S+,S,S-,NS such that a score of NS means we think you would benefit from some extra help (and we will talk to you about this!) and a score of S- means we think you don't need extra help but you weren't far off so keep practicing!\n",
     "\n",
     "## What about my working? How will you give credit for that?\n",
     "\n",
@@ -1234,7 +1234,7 @@
     "\n",
     "![surfing](images/surfing.jpg)\n",
     "\n",
-    "I'd recommend doing some *practice* to keep your maths skill level up and to stop the rustiness setting in. That might be redoing the odd question off a problem sheet. The important thing is not to do a lot - you'll need a break which is also really important - but to do a little quite often.\n",
+    "I'd recommend doing some *practice* to keep your maths skill level up and to stop the rustiness setting in. Alongside Problem Sheet 8 (which is due in at the start of week 1 next term) you will find a Christmas Practice sheet. If you are experienced at Maths, doing the questions on that sheet over the course of the holidays should be enough. Or you might choose to redo the odd question off a problem sheet. The important thing is NOT to do a lot - you'll need a break which is also really important - but to do a little quite often.\n",
     "\n",
     "Also don't 'read' the lecture notes. That might *feel* like learning, but it is only by *doing* mathematics that you keep your skill-level up. \n",
     "\n",
@@ -1278,16 +1278,34 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "Strongly disagree\n",
+    "Disagree\n",
+    "Neither disagree or agree\n",
+    "Agree\n",
+    "Strongly agree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "* I enjoyed the course\n",
+    "* The warm-up exercises helped me get in the right frame of mind for the lecture\n",
+    "* I enjoyed the weekly challenges\n",
+    "* It would help my understanding if there were short quizzes in the middle of the lectures\n",
     "* The lectures were easy to understand and follow\n",
     "* I found I could concentrate more having the lectures split into smaller parts\n",
     "* This course was useful as it helped me the other subjects\n",
     "* Doing the problem sheets helped me understand the content of the lectures\n",
     "* The examples classes were helpful and a valuable use of my time\n",
-    "* My tutor thought carefully about how best to help me \n",
+    "* My tutor thought carefully about how best to help me understand the content of the course\n",
     "* I studied mathematics in my last year at school\n",
     "* What three things would you like to see changed for next year?\n",
     "* What three things would you like to see kept for next year?"
