--- a/quantitative_biochemistry/Lecture 00 - Hemoglobin.ipynb
+++ b/quantitative_biochemistry/Lecture 00 - Hemoglobin.ipynb
@@ -5,9 +5,7 @@
    "execution_count": 1,
    "id": "f2dd3f8b-32e8-4b5c-889d-421cc9b7fda1",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -79,12 +77,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "c95db8ca-0d4f-4f2c-ad53-36648204c360",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -104,21 +100,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_15486267756157622651() {\n",
+       "            function code_toggle_794058084473876451() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_15486267756157622651()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_794058084473876451()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +138,7 @@
     "\n",
     "n=1\n",
     "y1 = (x**n)/((x**n)+(p50**n))\n",
-    "axis.plot(x, y2,'#662506')\n",
+    "axis.plot(x, y1,'#662506')\n",
     "axis.annotate('$n=1$',xy=(100,0.77),c='#662506',ha='left')\n",
     "\n",
     "n=2\n",
