--- a/quantitative_biochemistry/Lecture-12-Vectors-and-Matrics.ipynb
+++ b/quantitative_biochemistry/Lecture-12-Vectors-and-Matrics.ipynb
@@ -433,7 +433,8 @@
    "source": [
     "### Example\n",
     "\n",
-    "Show $\\underline{v_3}=2\\underline{i}+3\\underline{j} $ and $\\underline{v_4}=4\\underline{i}-2\\underline{j} $ on an $x-y$ plane. It does not matter where on the $x-y$ plane you place them.\n"
+    "Show $$\\underline{v_3}=2\\underline{i}+3\\underline{j}$$  and $$\\underline{v_4}=4\\underline{i}-2\\underline{j}$$ \n",
+    "on an $x-y$ plane. It does not matter where on the $x-y$ plane you place them.\n"
    ]
   },
   {
@@ -1280,7 +1281,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "Strongly disagree\n",
@@ -1293,7 +1298,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "* I enjoyed the course\n",
@@ -1325,7 +1334,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1339,7 +1348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
