fixed annotate deprecation warning

--- a/quantitative_biochemistry/Lecture-03-Introducing-Calculus.ipynb
+++ b/quantitative_biochemistry/Lecture-03-Introducing-Calculus.ipynb
@@ -229,11 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -345,11 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -434,11 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -608,11 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -692,11 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -776,11 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -869,11 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -943,10 +915,10 @@
     "axis.plot((2.5,3),(10,10),'k:')\n",
     "axis.plot((2.5,3),(17.625,17.625),'k:')\n",
     "\n",
-    "axis.annotate(s='',xy=(2,5),xytext=(2.5,5),arrowprops=dict(arrowstyle='<->'))\n",
+    "axis.annotate('',xy=(2,5),xytext=(2.5,5),arrowprops=dict(arrowstyle='<->'))\n",
     "axis.annotate('$\\delta x = h$',xy=(2.25,4),ha='center')\n",
     "\n",
-    "axis.annotate(s='',xy=(2.75,10),xytext=(2.75,17.625),arrowprops=dict(arrowstyle='<->'))\n",
+    "axis.annotate('',xy=(2.75,10),xytext=(2.75,17.625),arrowprops=dict(arrowstyle='<->'))\n",
     "axis.annotate('$\\delta y$',xy=(2.8,13.7))\n",
     "\n",
     "plt.show()\n",
@@ -1141,11 +1113,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1235,11 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1347,11 +1311,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1459,11 +1419,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1571,11 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1767,11 +1719,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1874,11 +1822,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2012,11 +1956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
