--- a/quantitative_biochemistry/Lecture-04-Trigonometry-and-Differentiation.ipynb
+++ b/quantitative_biochemistry/Lecture-04-Trigonometry-and-Differentiation.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy, math\n",
@@ -71,11 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -168,11 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -277,11 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -355,11 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -490,11 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -633,11 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -714,11 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -819,11 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -935,11 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 269,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -996,11 +956,11 @@
     "axis.plot((2,2),(0,10),'k:')\n",
     "axis.plot((0,2),(10,10),'k:')\n",
     "\n",
-    "axis.annotate(s='$f(a)$',xy=(1.8,10),ha='right')\n",
-    "axis.annotate(s='$f(b)$',xy=(1.8,17.625),ha='right')\n",
+    "axis.annotate('$f(a)$',xy=(1.8,10),ha='right')\n",
+    "axis.annotate('$f(b)$',xy=(1.8,17.625),ha='right')\n",
     "\n",
-    "axis.annotate(s='$a$',xy=(2,-1.5),ha='center')\n",
-    "axis.annotate(s='$b$',xy=(2.5,-1.5),ha='center')\n",
+    "axis.annotate('$a$',xy=(2,-1.5),ha='center')\n",
+    "axis.annotate('$b$',xy=(2.5,-1.5),ha='center')\n",
     "\n",
     "\n",
     "axis.plot((2,2.5),(10,10),'k:')\n",
@@ -1013,16 +973,16 @@
     "axis.plot((2.5,2.5),(0,10),'k:')\n",
     "axis.plot((2.5,0),(17.625,17.625),'k:')\n",
     "\n",
-    "axis.annotate(s='',xy=(2,5),xytext=(2.5,5),arrowprops=dict(arrowstyle='<->'))\n",
+    "axis.annotate('',xy=(2,5),xytext=(2.5,5),arrowprops=dict(arrowstyle='<->'))\n",
     "axis.annotate('$h=b-a$',xy=(2.25,3.6),ha='center')\n",
     "\n",
-    "axis.annotate(s='',xy=(2.55,10),xytext=(2.55,16),arrowprops=dict(arrowstyle='<->'))\n",
+    "axis.annotate('',xy=(2.55,10),xytext=(2.55,16),arrowprops=dict(arrowstyle='<->'))\n",
     "axis.annotate('$d$',xy=(2.6,13))\n",
     "\n",
-    "axis.annotate(s='',xy=(2.55,0),xytext=(2.55,10),arrowprops=dict(arrowstyle='<->'))\n",
+    "axis.annotate('',xy=(2.55,0),xytext=(2.55,10),arrowprops=dict(arrowstyle='<->'))\n",
     "axis.annotate('$f(a)$',xy=(2.6,5))\n",
     "\n",
-    "axis.annotate(s='',xy=(2.55,16),xytext=(2.55,17.625),arrowprops=dict(arrowstyle='<->'))\n",
+    "axis.annotate('',xy=(2.55,16),xytext=(2.55,17.625),arrowprops=dict(arrowstyle='<->'))\n",
     "axis.annotate('$\\epsilon$',xy=(2.6,16.5))\n",
     "\n",
     "plt.show()\n",
@@ -1133,11 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# ## The recipricol of a differential\n",
@@ -1385,18 +1341,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1410,7 +1362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
