--- a/quantitative_biochemistry/Lecture-02-Indices-and-Logarithms.ipynb
+++ b/quantitative_biochemistry/Lecture-02-Indices-and-Logarithms.ipynb
@@ -1074,7 +1074,7 @@
     "| 25.0 | 15.0 |\n",
     "| 64.0 | 24.0 |\n",
     "\n",
-    "how can we fit a curve of the form $y=Ax^n$? If we plot the data, we indeed see that it isn't going to be described by a straight line and a function of the form $Ax^n$ does indeed look promising. We could draw by hand a curve through the points, but that doesn't tells us anything! For example, it doesn't help us prediction a value of $y$ when $x=100$. "
+    "how can we fit a curve of the form $y=Ax^n$? If we plot the data, we indeed see that it isn't going to be described by a straight line and a function of the form $Ax^n$ does indeed look promising. We could draw by hand a curve through the points, but that doesn't tells us anything! For example, it doesn't help us predict a value of $y$ when $x=100$. "
    ]
   },
   {
