--- a/quantitative_biochemistry/Lecture-05-Further-differentiation.ipynb
+++ b/quantitative_biochemistry/Lecture-05-Further-differentiation.ipynb
@@ -79,15 +79,15 @@
     "\n",
     "First, what is a quotient? It is just one function divided by another, like\n",
     "\n",
-    "$$y = \\frac{u(x)}{v(x)} $$\n",
+    "$$y = \\frac{f(x)}{g(x)} $$\n",
     "\n",
     "This is another way of combining functions that we need to be able to differentiate. We'll state the result first using Leibniz notation and show how you can derive it later\n",
     "\n",
-    "$$\\boxed{\\frac{d}{dx}\\left ( \\frac{u}{v} \\right ) = \\frac{v\\frac{du}{dx} - u\\frac{dv}{dx}}{v^2}}$$\n",
+    "$$\\boxed{\\frac{d}{dx}\\left ( \\frac{f}{g} \\right ) = \\frac{g\\frac{df}{dx} - f\\frac{dg}{dx}}{v^2}}$$\n",
     "\n",
     "or, using Newtonian notation\n",
     "\n",
-    "$$\\boxed{\\frac{d}{dx}\\left ( \\frac{u}{v} \\right )= \\frac{vu' - uv'}{v^2}}$$\n"
+    "$$\\boxed{\\frac{d}{dx}\\left ( \\frac{f}{g} \\right )= \\frac{gf' - fg'}{g^2}}$$\n"
    ]
   },
   {
@@ -103,14 +103,14 @@
     "Again, just like the product rule we separately identify the functions and calculate their differentials\n",
     "\n",
     "\\begin{align*}\n",
-    " u(x) &= 3x-1 &\\quad u'(x) &= 3\\\\\n",
-    " v(x) &= 4x+2 &\\quad v'(x) &= 4\n",
+    " f(x) &= 3x-1 &\\quad f'(x) &= 3\\\\\n",
+    " g(x) &= 4x+2 &\\quad g'(x) &= 4\n",
     "\\end{align*}\n",
     "\n",
     "Then we can substitute everything into our result\n",
     "\n",
     "\\begin{align*}\n",
-    "\\frac{d}{dx}\\left ( \\frac{u}{v} \\right ) &= \\frac{vu' - uv'}{v^2}\\\\\n",
+    "\\frac{d}{dx}\\left ( \\frac{f}{g} \\right ) &= \\frac{gf' - fg'}{g^2}\\\\\n",
     "&= \\frac{(4x+2)3 - (3x-1)4}{(4x+2)^2}\\\\\n",
     "&= \\frac{12x + 6 -12x + 4}{(4x+2)^2}\\\\\n",
     "&= \\frac{10}{(4x+2)^2}\\\\\n",
@@ -130,13 +130,13 @@
     "\n",
     "Let's remind ourselves of the product rule\n",
     "\n",
-    "$$\\frac{d}{dx}(u.v) = u'v + uv'$$\n",
+    "$$\\frac{d}{dx}(f.g) = f'g + fg'$$\n",
     "\n",
     "Again, let's write out $u$ and $v$ separately, but note that $v$ here is different to before!\n",
     "\n",
     "\\begin{align*}\n",
-    " u(x) &= 3x-1 &\\quad u'(x) &= 3\\\\\n",
-    " v(x) &= \\frac{1}{4x+2} &\\quad v'(x) &= \\frac{-4}{(4x+2)^2}\n",
+    " f(x) &= 3x-1 &\\quad f'(x) &= 3\\\\\n",
+    " g(x) &= \\frac{1}{4x+2} &\\quad g'(x) &= \\frac{-4}{(4x+2)^2}\n",
     "\\end{align*}\n",
     "\n",
     "\\begin{align*}\n",
@@ -168,8 +168,8 @@
     "\n",
     "$$y = \\frac{a(x)}{b(x)}$$\n",
     "\\begin{align*}\n",
-    " u(x) &= a &\\quad u'(x) &= a'\\\\\n",
-    " v(x) &= \\frac{1}{b} &\\quad v'(x) &= -\\frac{b'}{b^2}\n",
+    " f(x) &= a &\\quad f'(x) &= a'\\\\\n",
+    " g(x) &= \\frac{1}{b} &\\quad g'(x) &= -\\frac{b'}{b^2}\n",
     "\\end{align*}\n",
     "\n",
     "\\begin{align*}\n",
@@ -178,7 +178,7 @@
     "\\end{align*}\n",
     "which if we replace $a$ by $u$ and $b$ by $v$ is our result!\n",
     "\n",
-    "$$\\frac{dy}{dx}= \\frac{u'v-uv'}{v^2}$$"
+    "$$\\frac{dy}{dx}= \\frac{f'g-fg'}{g^2}$$"
    ]
   },
   {
@@ -949,7 +949,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -963,7 +963,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
