--- a/quantitative_biochemistry/Lecture-06-Partial-differentiation.ipynb
+++ b/quantitative_biochemistry/Lecture-06-Partial-differentiation.ipynb
@@ -98,13 +98,13 @@
     "\n",
     "This is a PRODUCT of two functions so we can apply the product rule to differentiate it.\n",
     "\n",
-    "$$\\frac{d}{dx}(u.v) = u'v + uv'$$\n",
+    "$$\\frac{d}{dx}(f.g) = f'g + fg'$$\n",
     "\n",
     "Write out $u$ and $v$ separately and differentiate each\n",
     "\n",
     "\\begin{align*}\n",
-    " u(x) &= x^2 &\\quad u'(x) &= 2x\\\\\n",
-    " v(x) &= e^x &\\quad v'(x) &= e^x\n",
+    " f(x) &= x^2 &\\quad f'(x) &= 2x\\\\\n",
+    " g(x) &= e^x &\\quad g'(x) &= e^x\n",
     "\\end{align*}\n",
     "\n",
     "Now we can differentiate the function\n",
@@ -126,13 +126,13 @@
     "\n",
     "This is the QUOTIENT of two functions so we can apply the quotient rule. (or, remember we can always apply the product rule as long as we correctly define both functions so they are a product).\n",
     "\n",
-    "$$\\frac{d}{dx}\\left ( \\frac{u}{v} \\right )= \\frac{vu' - uv'}{v^2}$$\n",
+    "$$\\frac{d}{dx}\\left ( \\frac{f}{g} \\right )= \\frac{gf' - fg'}{v^2}$$\n",
     "\n",
-    "Write out $u$ and $v$ separately and differentiate each \n",
+    "Write out $f$ and $g$ separately and differentiate each \n",
     "\n",
     "\\begin{align*}\n",
-    " u(x) &= e^x &\\quad u'(x) &= e^x\\\\\n",
-    " v(x) &= x &\\quad v'(x) &= 1\n",
+    " f(x) &= e^x &\\quad f'(x) &= e^x\\\\\n",
+    " g(x) &= x &\\quad g'(x) &= 1\n",
     "\\end{align*}\n",
     "\n",
     "Now we can differentiate the function\n",
@@ -155,18 +155,18 @@
     "\n",
     "This is a function applied to a function and so we must use the CHAIN RULE. Swapping to Leibniz notation for clarity \n",
     "\n",
-    "$$\\frac{d}{dx}(u(v(x)) = \\frac{du}{dv}\\times \\frac{dv}{dx}$$\n",
+    "$$\\frac{d}{dx}(f(g(x)) = \\frac{df}{dg}\\times \\frac{dg}{dx}$$\n",
     "\n",
     "Write out $u$ and $v$ separately and differentiate each with respect to the correct variable as specified above\n",
     "\\begin{align*}\n",
-    "v(x) &= x^2\\quad & \\frac{dv}{dx} &=2x\\\\\n",
-    "u(v) &= e^v  \\quad & \\frac{du}{dv} &=e^v\\\\\n",
+    "g(x) &= x^2\\quad & \\frac{dg}{dx} &=2x\\\\\n",
+    "f(v) &= e^g  \\quad & \\frac{df}{dg} &=e^g\\\\\n",
     "\\end{align*}\n",
     "\n",
     "Hence\n",
     "\n",
     "\\begin{align*}\n",
-    "\\frac{dy}{dx} &= e^v.2x\\\\\n",
+    "\\frac{dy}{dx} &= e^g.2x\\\\\n",
     "&= e^{x^2}.2x\\\\\n",
     "&= 2xe^{x^2}\n",
     "\\end{align*}\n"
@@ -194,14 +194,14 @@
     "\n",
     "Write out $u$ and $v$ separately and differentiate each with respect to the correct variable \n",
     "\\begin{align*}\n",
-    "v(x) &= ax\\quad & \\frac{dv}{dx} &=a\\\\\n",
-    "u(v) &= e^v  \\quad & \\frac{du}{dv} &=e^v\\\\\n",
+    "g(x) &= ax\\quad & \\frac{dg}{dx} &=a\\\\\n",
+    "f(v) &= e^v  \\quad & \\frac{df}{dv} &=e^g\\\\\n",
     "\\end{align*}\n",
     "\n",
     "Hence\n",
     "\n",
     "\\begin{align*}\n",
-    "\\frac{dy}{dx} &= e^v.a\\\\\n",
+    "\\frac{dy}{dx} &= e^g.a\\\\\n",
     "&= e^{ax}.a\\\\\n",
     "&= ae^{ax}\n",
     "\\end{align*}"
@@ -222,14 +222,14 @@
     "As usual, write out $u$ and $v$ separately and differentiate each with respect to the correct variable (notice I am keeping the scalar factor $2$ separate but I must remember to put it into the final expression!)\n",
     "\n",
     "\\begin{align*}\n",
-    "v(x) &= a-x\\quad & \\frac{dv}{dx} &=-1\\\\\n",
-    "u(v) &= \\ln v  \\quad & \\frac{du}{dv} &=\\frac{1}{v}\\\\\n",
+    "g(x) &= a-x\\quad & \\frac{dg}{dx} &=-1\\\\\n",
+    "f(v) &= \\ln g  \\quad & \\frac{df}{dv} &=\\frac{1}{g}\\\\\n",
     "\\end{align*}\n",
     "\n",
     "Hence\n",
     "\n",
     "\\begin{align*}\n",
-    "\\frac{dy}{dx} &= 2.\\frac{1}{v}.-1\\\\\n",
+    "\\frac{dy}{dx} &= 2.\\frac{1}{g}.-1\\\\\n",
     "&= - \\frac{2}{a-x}\n",
     "\\end{align*}\n",
     "\n"
@@ -814,7 +814,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -828,7 +828,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
