--- a/quantitative_biochemistry/Lecture-05-Further-differentiation.ipynb
+++ b/quantitative_biochemistry/Lecture-05-Further-differentiation.ipynb
@@ -99,23 +99,23 @@
     "### Example\n",
     "\n",
     "\\begin{align*}\n",
-    "y &= \\frac{3x-1}{4x+2}\n",
+    "y &= \\frac{3x-1}{4x}\n",
     "\\end{align*}\n",
     "\n",
     "Again, just like the product rule we separately identify the functions and calculate their differentials\n",
     "\n",
     "\\begin{align*}\n",
     " f(x) &= 3x-1 &\\quad f'(x) &= 3\\\\\n",
-    " g(x) &= 4x+2 &\\quad g'(x) &= 4\n",
+    " g(x) &= 4x &\\quad g'(x) &= 4\n",
     "\\end{align*}\n",
     "\n",
     "Then we can substitute everything into our result\n",
     "\n",
     "\\begin{align*}\n",
     "\\frac{d}{dx}\\left ( \\frac{f}{g} \\right ) &= \\frac{gf' - fg'}{g^2}\\\\\n",
-    "&= \\frac{(4x+2)3 - (3x-1)4}{(4x+2)^2}\\\\\n",
-    "&= \\frac{12x + 6 -12x + 4}{(4x+2)^2}\\\\\n",
-    "&= \\frac{10}{(4x+2)^2}\\\\\n",
+    "&= \\frac{(4x).3 - (3x-1)4}{(4x)^2}\\\\\n",
+    "&= \\frac{12x - 12x + 4}{16x^2}\\\\\n",
+    "&= \\frac{1}{4x^2}\\\\\n",
     "\\end{align*}"
    ]
   },
@@ -138,14 +138,13 @@
     "\n",
     "\\begin{align*}\n",
     " f(x) &= 3x-1 &\\quad f'(x) &= 3\\\\\n",
-    " g(x) &= \\frac{1}{4x+2} &\\quad g'(x) &= \\frac{-4}{(4x+2)^2}\n",
+    " g(x) &= \\frac{1}{4x} &\\quad g'(x) &= -\\frac{1}{4x^2}\n",
     "\\end{align*}\n",
     "\n",
     "\\begin{align*}\n",
-    "\\frac{dy}{dx} &= 3.\\frac{1}{4x+2} +(3x-1).\\frac{-4}{(4x+2)^2}\\\\\n",
-    "&= \\frac{3(4x+2) - 4(3x-1)}{(4x+2)^2}\\\\\n",
-    "&= \\frac{12x +6  - 12x +4)}{(4x+2)^2}\\\\\n",
-    "&= \\frac{10}{(4x+2)^2}\\\\\n",
+    "\\frac{dy}{dx} &= 3.\\frac{1}{4x} +(3x-1).-\\frac{1}{4x^2}\\\\\n",
+    "&= \\frac{3x - (3x-1)}{4x^2}\\\\\n",
+    "&= \\frac{1}{4x^2}\\\\\n",
     "\\end{align*}\n",
     "\n",
     "Which is what we got using the quotient rule!\n"
