--- a/quantitative_biochemistry/Lecture-08-Integration-II.ipynb
+++ b/quantitative_biochemistry/Lecture-08-Integration-II.ipynb
@@ -358,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Whilst it feels like we are making progress, we STILL can't integrate the form $\\int xe^{-x}.dx$. We NEED another method"
+    "Whilst it feels like we are making progress, we STILL can't integrate the form $\\int xe^{-x}.dx$. We need ANOTHER method"
    ]
   },
   {
@@ -374,7 +374,7 @@
    "source": [
     "Let's explore this new method then come back and solve our Maxwell-Boltzmann integral.\n",
     "\n",
-    "Recall that\n",
+    "Recall the product rule for differentiation\n",
     "\n",
     "\\begin{align*}\n",
     "\\frac{d}{dx} (f(x)g(x)) &= f(x)\\frac{dg(x)}{dx} + \\frac{df(x)}{dx}g(x)\\\\\n",
@@ -830,7 +830,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -844,7 +844,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
