--- a/quantitative_biochemistry/Lecture-07-Integration.ipynb
+++ b/quantitative_biochemistry/Lecture-07-Integration.ipynb
@@ -241,7 +241,7 @@
     "\n",
     "$$ \\delta A \\approx y. \\delta x $$\n",
     "\n",
-    "But this is clearly an overestimate (if the curve had $\\frac{dy}{dx} < 0$ then it would be an underestimate)"
+    "But this is clearly an underestimate (if the curve had $\\frac{dy}{dx} < 0$ then it would be an overestimate)"
    ]
   },
   {
@@ -251,7 +251,7 @@
     "However we can imagine splitting up the region betwen $x=1$ and $x=2$ into lots of small strips, calculating their areas and adding them up (summing them)\n",
     "\n",
     "\n",
-    "$$ \\text{total area (A)} \\approx \\sum_{x=1}^{x=2} y.\\delta x$$"
+    "$$ \\text{total area (A)} \\approx \\sum_{x=1}^{x=2} y(x).\\delta x$$"
    ]
   },
   {
@@ -298,7 +298,7 @@
     "\n",
     "\\begin{align*}\n",
     "A &= \\lim_{\\delta x \\rightarrow 0} \\sum_{x=1}^{x=2} \\delta A\\\\\n",
-    " &= \\lim_{\\delta x \\rightarrow 0} \\sum_{x=1}^{x=2}  y. \\delta x\\\\\n",
+    " &= \\lim_{\\delta x \\rightarrow 0} \\sum_{x=1}^{x=2}  y(x). \\delta x\\\\\n",
     "\\end{align*}"
    ]
   },
@@ -382,7 +382,7 @@
     "so \n",
     "\n",
     "\\begin{align*}\n",
-    "\\int_{x=1}^{x=2} 2x. dx &= \\left [ \\frac{1}{3} x^3 \\right ]_{x=1}^{x=2}\\\\\n",
+    "\\int_{x=1}^{x=2} x^2. dx &= \\left [ \\frac{1}{3} x^3 \\right ]_{x=1}^{x=2}\\\\\n",
     "&= \\frac{8}{3} - \\frac{1}{3}\\\\\n",
     "&= \\frac{7}{3} \n",
     "\\end{align*}\n"
@@ -846,7 +846,7 @@
     "\n",
     "we can make the *substitution* $u=g(x)$ and rewrite this as \n",
     "\n",
-    "$$\\boxed{I = \\int f(u).\\frac{dx}{dx}.du}$$"
+    "$$\\boxed{I = \\int f(u).\\frac{dx}{du}.du}$$"
    ]
   },
   {
