--- a/quantitative_biochemistry/Lecture-08-Integration-II.ipynb
+++ b/quantitative_biochemistry/Lecture-08-Integration-II.ipynb
@@ -559,10 +559,10 @@
    "metadata": {},
    "source": [
     "\\begin{align*}\n",
-    "\\int^{\\infty}_0 ze^{-z}.dz &= \\left [ z.e^{-z} \\right ]^\\infty_0 - \\int^{\\infty}_0 -1.e^{-z}.dz\\\\\n",
-    "&= \\left [ z.e^{-z} \\right ]^\\infty_0 + \\int^{\\infty}_0 e^{-z}.dz\\\\\n",
-    "&= \\left [ z.e^{-z} \\right ]^\\infty_0 + \\left [ -e^{-z} \\right ]^{\\infty}_0\\\\\n",
-    "&= \\left [ z.e^{-z} -e^{-z} \\right ]^{\\infty}_0\\\\\n",
+    "\\int^{\\infty}_0 ze^{-z}.dz &= \\left [ -z.e^{-z} \\right ]^\\infty_0 - \\int^{\\infty}_0 -1.e^{-z}.dz\\\\\n",
+    "&= \\left [ -z.e^{-z} \\right ]^\\infty_0 + \\int^{\\infty}_0 e^{-z}.dz\\\\\n",
+    "&= \\left [ -z.e^{-z} \\right ]^\\infty_0 + \\left [ -e^{-z} \\right ]^{\\infty}_0\\\\\n",
+    "&= \\left [ -z.e^{-z} -e^{-z} \\right ]^{\\infty}_0\\\\\n",
     "&= (0-0)-(0-1)\\\\\n",
     "&= 1\n",
     "\\end{align*}"
