--- a/quantitative_biochemistry/Lecture-10-Differential-Equations-II.ipynb
+++ b/quantitative_biochemistry/Lecture-10-Differential-Equations-II.ipynb
@@ -665,7 +665,25 @@
     "&= 1.88 \\text{ million (3.s.f)}\n",
     "\\end{align*}\n",
     "\n",
+    "From the World Health Organisation website on 15 November 2021:\n",
     "\n",
+    "> On 30 January 2020 COVID-19 was declared a Public Health Emergency of International Concern (PHEIC) with an official death toll of 171. By 31 December 2020, this figure stood at 1 813 188. Yet preliminary estimates suggest the total number of global deaths attributable to the COVID-19 pandemic in 2020 is at least 3 million, representing 1.2 million more deaths than officially reported.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<img src=\"images/thinking-face.png\" width=50 title=\"Hmm\" style=\"vertical-align:top\"/>\n",
+    "<b>Thought:</b> It is no good having a decent model if the data you build off are incomplete or poor!\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "What would happen if the doubling time was twice as long? That is equivalent to $\\lambda$ being halved, hence\n",
     "\n",
     "\\begin{align*}\n",
@@ -674,7 +692,6 @@
     "N_{\\text{world}} &= 1,270,000\\times e^{0.5*6.36 \\times 10^{-3} \\times 62}\\\\\n",
     "&= 1.54 \\text{ million (3.s.f)}\n",
     "\\end{align*}\n",
-    "\n",
     "\n"
    ]
   },
