--- a/quantitative_biochemistry/Lecture-12-Vectors-and-Matrics.ipynb
+++ b/quantitative_biochemistry/Lecture-12-Vectors-and-Matrics.ipynb
@@ -1178,15 +1178,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Usually, this would be a paper-based assessment, however this is unlikely to be possible, so this year we will be be using a Canvas Quiz. The exact details will be confirmed closer to the time, but it will look something like\n",
+    "Before last, this would have been a paper-based assessment, however the pandemic forced us to use a Canvas Quiz last year and it worked well. The exact details will be confirmed closer to the time, but the plan at present is\n",
     "\n",
-    "* the quiz will be published at a specific time on a specific day e.g. 2pm.\n",
-    "* you will then have to login into Canvas using your Oxford SSO and complete the quiz in the time allowed (1 hr 45 min). \n",
-    "* a question may ask for \n",
-    "  - a *numerical* answer, in which case it will tell you the units required (if applicable), and you then enter the number you've worked out in the box\n",
-    "  - an *algebraic* answer, in which you'll be presented with several choices and have to select one\n",
-    "  - a *graph*. You will need to plot this on 2 mm graph paper and e.g. measure the gradient if that is required. A photograph or scan of the graph must be either uploaded to the question or sent to your tutor.\n",
-    "* the quiz will close later in the same day, e.g. 4.30pm which allows for technical problems and scanning the graph."
+    "* the assessment will take the form of a Canvas Quiz hence you will then have to login into Canvas using your Oxford SSO \n",
+    "* the quiz will be open to complete from noon to 8pm on Wed 26 January 2022 (week 2)\n",
+    "* you will have a generous time limit (2 hr). \n",
+    "* it will be multiple choice only and each question always has the additional option \"I don't know how to tackle this problem\"; if you genuinely don't know, please tick this option.\n"
    ]
   },
   {
@@ -1195,7 +1192,7 @@
    "source": [
     "## Canvas example\n",
     "\n",
-    "We will now look at a few example questions in Canvas to give you a feel for how it will work."
+    "We will now look at last year's quiz in Canvas to give you a feel for how it will work."
    ]
   },
   {
@@ -1214,7 +1211,7 @@
    "source": [
     "## Will I be told my mark?\n",
     "\n",
-    "We plan on scoring the assessment in the same way as the practicals i.e. S+,S,S-,NS such that a score of NS means we think you would benefit from some extra help (and we will talk to you about this!) and a score of S- means we think you don't need extra help but you weren't far off so keep practicing!\n",
+    "We will score the assessment in the same way as the practicals i.e. S+,S,S-,NS such that a score of NS means we think you would benefit from some extra help (and we will talk to you about this!) and a score of S- means we think you don't need extra help but you weren't far off so keep practicing!\n",
     "\n",
     "## What about my working? How will you give credit for that?\n",
     "\n",
@@ -1231,13 +1228,15 @@
     "\n",
     "Going back to Lecture 1, I would say *revision* is the wrong word. For maths the right word is *practice*.\n",
     "\n",
-    "If you've listened to all the lectures and done all the problem sheets, *well done!* You have surfed the wave and at this very minute you are competent at maths. If you don't do any maths between the end of term and the assessment you will get *rusty* and things that are currently second-nature will become unfamiliar.\n",
+    "If you've come to all the lectures and done all the problem sheets, *well done!* You have surfed the wave and at this very minute you are competent at maths. If you don't do any maths between the end of term and the assessment you will get *rusty* and things that are currently second-nature will become unfamiliar.\n",
     "\n",
     "![surfing](images/surfing.jpg)\n",
     "\n",
     "I'd recommend doing some *practice* to keep your maths skill level up and to stop the rustiness setting in. Alongside Problem Sheet 8 (which is due in at the start of week 1 next term) you will find a Christmas Practice sheet. If you are experienced at Maths, doing the questions on that sheet over the course of the holidays should be enough. Or you might choose to redo the odd question off a problem sheet. The important thing is NOT to do a lot - you'll need a break which is also really important - but to do a little quite often.\n",
     "\n",
-    "Also don't 'read' the lecture notes. That might *feel* like learning, but it is only by *doing* mathematics that you keep your skill-level up. \n",
+    "The Christmas Practice sheet will NOT be marked so you don't have to do it.\n",
+    "\n",
+    "Please don't 'read' the lecture notes. That might *feel* like learning, but it is only by *doing* mathematics that you keep your skill-level up. \n",
     "\n",
     "This applies to preparing for the Prelims as well; better to do a little maths here and there rather than do none for months and then try and revise a week before the exam. This might work for a subject where it is more about remembering facts but not for mathematics.\n",
     "\n",
@@ -1245,14 +1244,23 @@
     "\n",
     "This applies *regardless* of your level of mathematical experience: all of us who teach on the course start out a little rusty but recover our competence by doing the questions, just like you.\n",
     "\n",
-    "What you want to avoid is thinking \"well, if I could have sat the exam in December I'd have done much better, but I'm a bit rusty now\""
+    "What you want to avoid is thinking \"well, if only I could have sat the exam in December I'd have done much better, but I'm a bit rusty now\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A last word from xkcd"
+    "# Course feedback\n",
+    "\n",
+    "Please also complete the \"Quantitative Biochemistry Lecture Feedback\" survey on Canvas that will be availabe from Mon 29 Nov until midnight Mon 6 Dec; I've lectured for over ten years and always ask the students questions in the last lecture whilst it is all fresh in your mind. I will (and have) change the course depending on what you say."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# A last word from `xkcd`"
    ]
   },
   {
@@ -1268,68 +1276,6 @@
    "source": [
     "![biochemistry has a positive velocity](images/xkcd-purity.png)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Course feedback\n",
-    "\n",
-    "Please complete the following quiz; I've lectured for over ten years and always ask the students questions in the last lecture whilst it is all fresh in your mind. I will (and have) change the course depending on what you say."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "Strongly disagree\n",
-    "Disagree\n",
-    "Neither disagree or agree\n",
-    "Agree\n",
-    "Strongly agree"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "* I enjoyed the course\n",
-    "* The warm-up exercises helped me get in the right frame of mind for the lecture\n",
-    "* I enjoyed the weekly challenges\n",
-    "* It would help my understanding if there were short quizzes in the middle of the lectures\n",
-    "* The lectures were easy to understand and follow\n",
-    "* I found I could concentrate more having the lectures split into smaller parts\n",
-    "* This course was useful as it helped me the other subjects\n",
-    "* Doing the problem sheets helped me understand the content of the lectures\n",
-    "* The examples classes were helpful and a valuable use of my time\n",
-    "* My tutor thought carefully about how best to help me understand the content of the course\n",
-    "* I studied mathematics in my last year at school\n",
-    "* What three things would you like to see changed for next year?\n",
-    "* What three things would you like to see kept for next year?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
